--- a/Serge_Kanashin/src/user.css
+++ b/Serge_Kanashin/src/user.css
@@ -1,5 +1,10 @@
 div {
   background-color: brown;
-  width: 100px;
-  height: 100px;
+  width: 250px;
+  height: 150px;
+}
+#app {
+ color: white;
+ text-align: center;
+ padding: 10px;
 }
