--- a/Gregory_Kovorotny/src/components/HomePage/HomePage.css
+++ b/Gregory_Kovorotny/src/components/HomePage/HomePage.css
@@ -1,21 +1,24 @@
 .home-page {
-  padding: 65px 50px;
-  height: 100vh;
+  padding-left: 50px;
+  padding-right: 50px;
+  margin-top: 60px;
+  margin-bottom: 51px;
+  min-height: calc(100vh - 101px);
 }
 
 .home-page .left-content {
+  height: calc(100% - 101px);
   text-align: center;
   padding: 20px;
-  height: 100%;
   border: solid 1px;
   border-radius: 5px;
   border-color: grey;
 }
 
 .home-page .main-content {
+  height: calc(100% - 101px);
   text-align: center;
   padding: 20px;
-  height: 100%;
   border: solid 1px;
   border-radius: 5px;
   border-color: grey;
