lesson 3 intermediate commit

--- a/Nikolay_But/src/components/Menu/Menu.css
+++ b/Nikolay_But/src/components/Menu/Menu.css
@@ -1,5 +1,12 @@
 .menu {
   background-color: aquamarine;
+  display: flex;
+  flex-flow: row no wrap;
+  list-style-type: none;
+  justify-content: flex-start;
+}
+.menu li {
+  margin-left: 2em;
 }
 
 .menu-big li a {
