--- a/Nikolay_But/src/components/Menu/Menu.css
+++ b/Nikolay_But/src/components/Menu/Menu.css
@@ -1,10 +1,19 @@
 .menu {
-  background-color: aquamarine;
+  background-color: #f5f5f5;
   display: flex;
-  flex-flow: row no wrap;
+  flex-flow: row nowrap;
   list-style-type: none;
-  justify-content: flex-start;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  width: 1140px;
+  line-height: 2em;
 }
+
+.menu .left-col {
+  display: flex;
+}
+
 .menu li {
   margin-left: 2em;
 }
@@ -16,3 +25,4 @@
 .menu-small li a {
   font-size: 16px;
 }
+
