--- a/Gregory_Kovorotny/src/components/PageContent/PageContent.scss
+++ b/Gregory_Kovorotny/src/components/PageContent/PageContent.scss
@@ -2,22 +2,21 @@
   padding-left: 50px;
   padding-right: 50px;
   margin-top: 60px;
-  margin-bottom: 51px;
-  min-height: calc(100vh - 101px);
+  min-height: calc(100vh - 120px);
 
-  .blog-entries {
+  .main-content {
     text-align: center;
     padding: 20px;
-    border: solid 1px;
-    border-radius: 5px;
-    border-color: grey;
+    // border: solid 1px;
+    // border-radius: 5px;
+    // border-color: grey;
   }
 
   .sidebar-widgets {
     text-align: center;
     padding: 20px;
-    border: solid 1px;
-    border-radius: 5px;
-    border-color: grey;
+    // border: solid 1px;
+    // border-radius: 5px;
+    // border-color: grey;
   }
 }
