--- a/Gregory_Kovorotny/src/components/PageContent/PageContent.scss
+++ b/Gregory_Kovorotny/src/components/PageContent/PageContent.scss
@@ -5,7 +5,7 @@
   min-height: calc(100vh - 120px);
 
   .main-content {
-    text-align: center;
+    // text-align: center;
     padding: 20px;
     // border: solid 1px;
     // border-radius: 5px;
@@ -13,7 +13,7 @@
   }
 
   .sidebar-widgets {
-    text-align: center;
+    // text-align: center;
     padding: 20px;
     // border: solid 1px;
     // border-radius: 5px;
