--- a/Gregory_Kovorotny/src/components/Blogger/Blogger.scss
+++ b/Gregory_Kovorotny/src/components/Blogger/Blogger.scss
@@ -1,3 +1,12 @@
 .blogger {
+  a.blogger-name {
+    display: block;
+    color: inherit;
+    text-decoration: none;
+  }
+
+  a.blogger-name:hover {
+    
+  }
 
 }
