Добавила роутинг между страницами Home - Blog - OnePost. Работаю над страницами Users и Comments

--- a/Mishina_Maria/src/components/Home/Home.scss
+++ b/Mishina_Maria/src/components/Home/Home.scss
@@ -1,3 +1,11 @@
+p {
+  line-height: 1.5;
+  margin: 30px 0;
+  font-size: 20px;
+  color: #212529;
+  font-family: Lora,'Times New Roman',serif;
+}
+
 .masthead {
   display: block;
   height: 100%;
