немного добавил стилей

--- a/Suchkov_Daniil/src/components/Comment/Comment.scss
+++ b/Suchkov_Daniil/src/components/Comment/Comment.scss
@@ -1,1 +1,6 @@
-.Comment{}
+.Comment{
+    background-color: #e9ecef;
+    border-radius: .3rem;
+    border: 2px solid rgba(94, 221, 21, 0.966);
+    padding: 10px;
+}
