--- a/Suchkov_Daniil/src/components/CommentsFoarm/CommentsFoarm.scss
+++ b/Suchkov_Daniil/src/components/CommentsFoarm/CommentsFoarm.scss
@@ -1,1 +1,11 @@
-.CommentsFoarm{}
+.CommentsFoarm{
+    background-color: #e9ecef;
+    border-radius: .3rem;
+    padding: 10px;
+}
+label{
+    width: 100%;
+}
+textarea{
+    width: 100%;
+}
